<resources>
    <string name="app_name">Primeira Consulta</string>
    <string name="action_settings">Settings</string>
    <string name="crm_ra">CRM/RA: </string>
    <string name="senha">Senha:</string>
    <string name="conectar">Conectar-se</string>
    <string name="status">Status</string>
    <string name="nome">Nome do Usuário:</string>
    <string name="cadastrar_aluno">Cadastrar Aluno</string>
    <string name="novo_prontuario">Novo Prontuário</string>
    <string name="ver_prontuarios">Ver Protuários</string>
    <string name="sair">Sair</string>
    <string name="ra">RA:</string>
    <string name="cadastro_de_aluno">Cadastro de Aluno</string>
    <string name="novo_prontu_rio">Novo Prontuário</string>
    <string name="editar_prontuario">Editar Prontuario</string>
</resources>
