<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sv_menu_scroll"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:text="CRM/RA: "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_menu_1"
                        android:textSize="18sp"
                        android:textStyle="normal|bold"
                        android:textAllCaps="true" />

                    <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_menu_ra"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:text="Nome: "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_menu_3"
                        android:textSize="18sp"
                        android:textStyle="normal|bold"
                        android:textAllCaps="true" />

                    <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_menu_nome"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:text="Status: "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_menu_2"
                        tools:text="Status: "
                        android:textSize="18sp"
                        android:textStyle="normal|bold"
                        android:textAllCaps="true" />

                    <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_menu_status"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:text="E-Mail: "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_menu_5"
                        android:textSize="18sp"
                        android:textStyle="normal|bold"
                        android:textAllCaps="true" />

                    <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_menu_email"
                        android:textSize="18sp" />
                </TableRow>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp">

                <Button
                    android:text="@string/cadastrar_aluno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_menu_cadastrar"
                    android:layout_marginTop="38dp" />

                <Button
                    android:text="@string/novo_prontuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_menu_novo_prontuario"
                    android:layout_marginTop="14dp" />

                <Button
                    android:text="@string/ver_prontuarios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_menu_listar_prontuarios"
                    android:layout_marginTop="16dp" />

                <Button
                    android:text="@string/sair"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_menu_sair"
                    android:layout_marginTop="16dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>